codigo 11_2
Python 3.8.2 (tags/v3.8.2:7b3ab59, Feb 25 2020, 22:45:29) [MSC v.1916 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> #Se carga la biblioteca
>>> import pickle
>>> #Guardar variable
>>> #No hay restriccion en lo que se pone como ext del archivo
>>> #generalmente se usa .p o .pickle como estandar
>>> archivo = open('memoria.p', 'wb')
>>> pickle.dump(memoria, archivo)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'memoria' is not defined
>>> pickle.dump(memoria, archivo)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'memoria' is not defined
>>> memoria = {1:0, 2:1, 3:1}
>>> pickle.dump(memoria archivo)
  File "<stdin>", line 1
    pickle.dump(memoria archivo)
                        ^
SyntaxError: invalid syntax
>>> pickle.dump(memoria, archivo)
>>> archivo.close() #Se cierra el archivo
>>> #Leer variable
>>> archivo = open('memoria.p', 'rb')
>>> memoria_de_archivo = pickle.load(archivo)
>>> archivo.close
<built-in method close of _io.BufferedReader object at 0x03869728>
>>> memoria
{1: 0, 2: 1, 3: 1}
>>> #Insertion sort
>>> def insertionSort(n_lista):
		for index in range(1, len(n_lista)):
			actual = n_lista[index]
			posicion = index
			print("valor a ordenar = {}".format(actual))
			while posicion>0 and n_lista[posicion-1]>actual:
				n_lista[posicion]= n_lista[posicion-1]
				posicion=posicion-1
			n_lista[posicion]=actual
			print(n_lista)
			print()
		return n_lista
... ... ... ... ... ... ... ... ... ... ... ... 
>>> #Datos de entrada
>>> lista = [21, 10, 0, 11, 5, 24, 20, 14, 1]
>>> print("lista desordenada {}".format(lista))
lista desordenada [21, 10, 0, 11, 5, 24, 20, 14, 1]
>>> insertionSort(lista)
valor a ordenar = 10
[10, 21, 0, 11, 5, 24, 20, 14, 1]

valor a ordenar = 0
[0, 10, 21, 11, 5, 24, 20, 14, 1]

valor a ordenar = 11
[0, 10, 11, 21, 5, 24, 20, 14, 1]

valor a ordenar = 5
[0, 5, 10, 11, 21, 24, 20, 14, 1]

valor a ordenar = 24
[0, 5, 10, 11, 21, 24, 20, 14, 1]

valor a ordenar = 20
[0, 5, 10, 11, 20, 21, 24, 14, 1]

valor a ordenar = 14
[0, 5, 10, 11, 14, 20, 21, 24, 1]

valor a ordenar = 1
[0, 1, 5, 10, 11, 14, 20, 21, 24]

[0, 1, 5, 10, 11, 14, 20, 21, 24]
>>> print("lista ordenada {}".format(lista))
lista ordenada [0, 1, 5, 10, 11, 14, 20, 21, 24]
>>> #Divide y venceras/ Quick sort